manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akscl02eastus2-2d9c"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akscl02eastus2-2d9c"
  template:
    metadata:
      labels:
        app: "akscl02eastus2-2d9c"
    spec:
      containers:
        - name: "akscl02eastus2-2d9c"
          image: "cdaas.azurecr.io/akscl02eastus2"
          ports:
          - containerPort: 8080
