manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-arc
  namespace: hello-arc 
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-arc
