manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "akscl02eastus2-2d9c"
    labels:
        app: "akscl02eastus2-2d9c"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: hello-arc-akscl02eastus2-2d9c.69731cda9f1848e8922c.eastus2.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "akscl02eastus2-2d9c"
                servicePort: 80
